--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,2 +1,7 @@
 <h1>Homepage#index</h1>
 <p>Find me in app/views/homepage/index.html.erb</p>
+
+<div data-controller="hello" data-hello-name="Chris">
+  <input data-target="hello.name" type="text" data-action="paste->hello#paste">
+  <button data-action="click->hello#log">Log</button>
+</div>
