--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -1,7 +1,18 @@
 <h1>Homepage#index</h1>
-<p>Find me in app/views/homepage/index.html.erb</p>
 
 <div data-controller="hello" data-hello-name="Chris">
   <input data-target="hello.name" type="text" data-action="paste->hello#paste">
   <button data-action="click->hello#log">Log</button>
+</div>
+
+<div>
+  <%= link_to "Sign Up!", new_sign_up_path %>
+</div>
+
+<div>
+  <% if Current.user %>
+    <%= link_to "Sign Out", auth.sign_out_path %>
+  <% else %>
+    <%= link_to "Sign In", auth.sign_in_path %>
+  <% end %>
 </div>
