--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,23 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header class="bg-white black-80 tc pv4 avenir">
+      <a href="" class="bg-black-80 ba b--black dib pa3 w2 h2 br-100">
+        <svg class="white" data-icon="skull" viewBox="0 0 32 32" style="fill:currentcolor"><title>skull icon</title><path d="M16 0 C6 0 2 4 2 14 L2 22 L6 24 L6 30 L26 30 L26 24 L30 22 L30 14 C30 4 26 0 16 0 M9 12 A4.5 4.5 0 0 1 9 21 A4.5 4.5 0 0 1 9 12 M23 12 A4.5 4.5 0 0 1 23 21 A4.5 4.5 0 0 1 23 12"></path></svg>
+      </a>
+      <h2 class="mt2 mb0 f6 fw4 ttu tracked"><%= yield :subtitle %></h2>
+    </header>
+
+    <main>
+      <div class="flex flex justify-center ma2 tc br2 pa2">
+        <h2 class="link b f3 f2-ns dim black-70 lh-solid"><%= yield :heading %></h2>
+      </div>
+      <%= yield %>
+      <footer class="vh-100 dt w-100">
+        <div class="dtc v-mid tc white ph3 ph4-l">
+          <%= yield :bottom_nav %>
+        </div>
+      </footer>
+    </main>
   </body>
 </html>
